# vote-pcap-analyzer

./: .gitignore  Cargo.toml  README.md  console-output-example.txt
output/: .gitkeep
sources/: .gitkeep
src/: console_display.rs  lib.rs  main.rs  output_generator.rs  pcap_processor.rs  solana_decoder.rs  validator_analyzer.rs  validator_resolver.rs
tests/: integration_tests.rs  integration_tests_identity_loading.rs  validator_resolver_tests.rs
tests/test_data/: invalid_identities.txt  mixed_identities.txt  valid_identities.txt
