[package]
name = "vote-pcap-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.21"
bs58 = "0.5"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
csv = "1.3"
hex = "0.4"
pcap = "2.3.0"
pnet = "0.35.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }